--- a/Example/index.html
+++ b/Example/index.html
@@ -2,7 +2,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
-  <div id="react-content">
+  <h2> If contributions provided: </h2>
+  <div id="react-content-grid">
+  </div>
+  <h2> If no contributions provided: </h2>
+  <div id="react-content-no-grid">
   </div>
   <script src="./build/bundle.js"></script>
 </body>
